--- a/.github/workflows/redhat.yml
+++ b/.github/workflows/redhat.yml
@@ -33,6 +33,8 @@ jobs:
           dnf config-manager --set-enabled crb
           dnf install -y blas-devel cmake gcc gcc-c++ git lapack-devel python3 python3-devel python3-pip
       - uses: actions/checkout@v4
+      - name: Install Numpy
+        run: python3 -m pip install numpy --no-binary numpy
       - name: Install Basix
         run: python3 -m pip install .[test]
       - name: Run units tests
