--- a/.github/workflows/redhat.yml
+++ b/.github/workflows/redhat.yml
@@ -20,8 +20,8 @@ on:
 jobs:
   build:
     name: Build and test (Red Hat)
-    runs-on: ubuntu-22.04
-    container: rockylinux/rockylinux:9
+    runs-on: ubuntu-latest
+    container: rockylinux/rockylinux:9.2
     env:
       CC: gcc
       CXX: g++
