--- a/.github/workflows/redhat.yml
+++ b/.github/workflows/redhat.yml
@@ -20,7 +20,7 @@ on:
 jobs:
   build:
     name: Build and test (Red Hat)
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-latestgit
     container: rockylinux/rockylinux:9.2
     env:
       CC: gcc
@@ -32,6 +32,8 @@ jobs:
           dnf install -y dnf-plugins-core
           dnf config-manager --set-enabled crb
           dnf install -y openblas-devel cmake gcc gcc-c++ git lapack-devel python3 python3-devel python3-pip
+      - name: Upgrade pip
+        run: python3 -m pip install pip --upgrade
       - uses: actions/checkout@v4
       - name: Install Basix
         run: python3 -m pip install --config-settings=cmake.build-type=Debug .[test]
