--- a/.github/workflows/redhat.yml
+++ b/.github/workflows/redhat.yml
@@ -36,7 +36,7 @@ jobs:
         run: python3 -m pip install pip --upgrade
       - uses: actions/checkout@v4
       - name: Install Basix
-        run: python3 -m pip install --config-settings=cmake.build-type=Debug .[test]
+        run: python3 -m pip install .[test]
       - name: Run units tests
         run: python3 -m pytest --durations 20 test/
       - name: Run Python demos
