Do not store .doctrees binary files on website

--- a/.github/workflows/pythonapp.yml
+++ b/.github/workflows/pythonapp.yml
@@ -65,6 +65,7 @@ jobs:
           doxygen
           cd ../python
           python -m sphinx -W -b html source build/html
+          rm -rf build/html/.doctrees
       - name: Upload C++ documentation artifact
         uses: actions/upload-artifact@v3
         with:
