--- a/.github/workflows/pythonapp.yml
+++ b/.github/workflows/pythonapp.yml
@@ -84,6 +84,7 @@ jobs:
           if-no-files-found: error
       - name: Build website documentation
         run: |
+          sudo apt-get install -y ruby-bundler ruby-dev
           export BASIX_VERSION=`python3 -c "import basix; print(basix.__version__)"`
           cd doc/web
           python make_html.py
