Disable doc style check

--- a/.github/workflows/pythonapp.yml
+++ b/.github/workflows/pythonapp.yml
@@ -42,8 +42,8 @@ jobs:
         run: flake8 --statistics test/ python/ demo/python
       # - name: Run mypy checks
       #   run: mypy python/basix
-      - name: pydocstyle checks
-        run: pydocstyle python/basix
+      # - name: pydocstyle checks
+      #   run: pydocstyle python/basix
       - name: isort checks
         run: isort --check .
       - name: Run units tests
