--- a/.github/workflows/pythonapp.yml
+++ b/.github/workflows/pythonapp.yml
@@ -36,6 +36,8 @@ jobs:
         run: |
           sudo apt-get update
           sudo apt-get install -y doxygen graphviz libopenblas-dev liblapack-dev ninja-build
+      - name: Install UFL branch
+        run: pip -v install git+https://github.com/FEniCS/ufl.git@mscroggs/gdim
       - name: Install Basix
         run: pip -v install .[ci]
       - name: Lint with flake8
