--- a/.github/workflows/pythonapp.yml
+++ b/.github/workflows/pythonapp.yml
@@ -25,7 +25,7 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-22.04]
-        python-version: ["3.8", "3.9", "3.10", "3.11"]
+        python-version: ["3.9", "3.10", "3.11"]
     steps:
       - uses: actions/checkout@v4
       - name: Set up Python
@@ -38,14 +38,12 @@ jobs:
           sudo apt-get install -y doxygen graphviz libopenblas-dev liblapack-dev ninja-build
       - name: Install Basix
         run: pip -v install .[ci]
-      - name: Lint with flake8
-        run: flake8 --statistics test/ python/ demo/python
+      - name: Ruff + isort
+        run: |
+          ruff check .
+          isort --check .
       - name: Run mypy checks
         run: mypy python/basix
-      - name: pydocstyle checks
-        run: pydocstyle python/basix
-      - name: isort checks
-        run: isort --check .
       - name: Run units tests
         run: pytest -n auto --durations 20 test/
       - name: Run simple CMake integration test
