--- a/.github/workflows/pythonapp.yml
+++ b/.github/workflows/pythonapp.yml
@@ -65,17 +65,17 @@ jobs:
           python -m sphinx -W -b html source build/html
           rm -rf build/html/.doctrees
       - name: Upload C++ documentation artifact
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4
         with:
-          name: doc-cpp
+          name: doc-cpp-${{ matrix.python-version }}
           path: |
             doc/cpp/html
           retention-days: 2
           if-no-files-found: error
       - name: Upload Python documentation artifact
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4
         with:
-          name: doc-python
+          name: doc-python-${{ matrix.python-version }}
           path: |
             doc/python/build/html
           retention-days: 2
